--- a/QiHuangDJ/VIewController/LoginAndRegister/LoginViewController.xib
+++ b/QiHuangDJ/VIewController/LoginAndRegister/LoginViewController.xib
@@ -8,6 +8,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
+                <outlet property="autoLoginButton" destination="oS1-nf-AP9" id="hup-bs-oHt"/>
+                <outlet property="passwordTextField" destination="u49-RO-qsV" id="Hbw-9a-O9R"/>
+                <outlet property="usernameTextField" destination="zZ7-kq-W4v" id="Zwi-rh-7D1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -31,75 +34,113 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBE-cd-dEr" userLabel="Username Holder View">
                             <rect key="frame" x="0.0" y="0.0" width="280" height="45"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="denglu_name.png" translatesAutoresizingMaskIntoConstraints="NO" id="gKu-EE-Sxb" userLabel="Username Icon">
-                                    <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="gKu-EE-Sxb" secondAttribute="height" multiplier="1:1" id="cKP-Do-JAk"/>
-                                    </constraints>
-                                </imageView>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" text="用户名/邮箱" translatesAutoresizingMaskIntoConstraints="NO" id="vKX-H2-mk7" userLabel="Username Text View">
-                                    <rect key="frame" x="53" y="11" width="207" height="23"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textView>
-                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AHR-tx-cT8" userLabel="Username Underline View">
-                                    <rect key="frame" x="20" y="42" width="240" height="1"/>
+                                <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AHR-tx-cT8" userLabel="Username Underline View">
+                                    <rect key="frame" x="8" y="44" width="264" height="1"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="Bul-qe-mdI"/>
                                     </constraints>
                                 </view>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="用户名/邮箱" minimumFontSize="14" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zZ7-kq-W4v" userLabel="Username Text Field">
+                                    <rect key="frame" x="53" y="0.0" width="207" height="45"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                </textField>
+                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="denglu_name.png" translatesAutoresizingMaskIntoConstraints="NO" id="gKu-EE-Sxb" userLabel="Username Icon">
+                                    <rect key="frame" x="8" y="0.0" width="45" height="45"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="gKu-EE-Sxb" secondAttribute="height" multiplier="1:1" id="cKP-Do-JAk"/>
+                                    </constraints>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="AHR-tx-cT8" secondAttribute="trailing" constant="20" id="CLR-Nm-bUZ"/>
+                                <constraint firstItem="gKu-EE-Sxb" firstAttribute="leading" secondItem="MBE-cd-dEr" secondAttribute="leading" constant="8" id="5SK-WK-St4"/>
+                                <constraint firstAttribute="trailing" secondItem="AHR-tx-cT8" secondAttribute="trailing" constant="8" id="CLR-Nm-bUZ"/>
                                 <constraint firstAttribute="bottom" secondItem="gKu-EE-Sxb" secondAttribute="bottom" id="Fse-Kg-VUg"/>
-                                <constraint firstAttribute="bottom" secondItem="AHR-tx-cT8" secondAttribute="bottom" constant="2" id="LD3-iH-oTy"/>
+                                <constraint firstItem="zZ7-kq-W4v" firstAttribute="leading" secondItem="gKu-EE-Sxb" secondAttribute="trailing" id="H0x-Si-rYA"/>
+                                <constraint firstAttribute="trailing" secondItem="zZ7-kq-W4v" secondAttribute="trailing" constant="20" id="Irr-Cj-ylh"/>
+                                <constraint firstAttribute="bottom" secondItem="AHR-tx-cT8" secondAttribute="bottom" id="LD3-iH-oTy"/>
                                 <constraint firstItem="gKu-EE-Sxb" firstAttribute="top" secondItem="MBE-cd-dEr" secondAttribute="top" id="Sgs-Wz-706"/>
+                                <constraint firstAttribute="bottom" secondItem="zZ7-kq-W4v" secondAttribute="bottom" id="UpY-Ea-ry6"/>
                                 <constraint firstAttribute="height" constant="45" id="eA2-vr-f7f"/>
-                                <constraint firstItem="AHR-tx-cT8" firstAttribute="leading" secondItem="MBE-cd-dEr" secondAttribute="leading" constant="20" id="saR-yg-8Cs"/>
-                                <constraint firstItem="gKu-EE-Sxb" firstAttribute="leading" secondItem="MBE-cd-dEr" secondAttribute="leading" id="xJF-uV-K48"/>
+                                <constraint firstItem="zZ7-kq-W4v" firstAttribute="top" secondItem="MBE-cd-dEr" secondAttribute="top" id="mqx-jW-5Bb"/>
+                                <constraint firstItem="AHR-tx-cT8" firstAttribute="leading" secondItem="MBE-cd-dEr" secondAttribute="leading" constant="8" id="saR-yg-8Cs"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xZ6-qf-mb1" userLabel="Password Holder View">
                             <rect key="frame" x="0.0" y="45" width="280" height="45"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="denglu_icon_mima.png" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-ll-OoI" userLabel="Password Icon">
-                                    <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="p2p-ll-OoI" secondAttribute="height" multiplier="1:1" id="xiU-YO-00K"/>
-                                    </constraints>
-                                </imageView>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" text="密码" translatesAutoresizingMaskIntoConstraints="NO" id="oIh-bs-NnD" userLabel="Password Text View">
-                                    <rect key="frame" x="53" y="11" width="207" height="23"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textView>
-                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1nm-4q-s1K" userLabel="Password Underline View">
-                                    <rect key="frame" x="20" y="42" width="240" height="1"/>
+                                <view alpha="0.25000000000000006" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1nm-4q-s1K" userLabel="Password Underline View">
+                                    <rect key="frame" x="8" y="44" width="264" height="1"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="h8w-PP-Oa5"/>
                                     </constraints>
                                 </view>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码" minimumFontSize="14" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="u49-RO-qsV" userLabel="Password Text Field">
+                                    <rect key="frame" x="53" y="0.0" width="152" height="45"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V3W-S8-HSi">
+                                    <rect key="frame" x="205" y="8" width="75" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="75" id="nCW-V9-RKU"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <state key="normal" title="忘记密码？">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="denglu_icon_mima.png" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-ll-OoI" userLabel="Password Icon">
+                                    <rect key="frame" x="8" y="0.0" width="45" height="45"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="p2p-ll-OoI" secondAttribute="height" multiplier="1:1" id="xiU-YO-00K"/>
+                                    </constraints>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstAttribute="trailing" secondItem="V3W-S8-HSi" secondAttribute="trailing" id="9P5-GQ-sLc"/>
                                 <constraint firstAttribute="bottom" secondItem="p2p-ll-OoI" secondAttribute="bottom" id="9zI-UV-SEz"/>
-                                <constraint firstAttribute="bottom" secondItem="1nm-4q-s1K" secondAttribute="bottom" constant="2" id="EcT-Tt-sbc"/>
-                                <constraint firstItem="1nm-4q-s1K" firstAttribute="leading" secondItem="xZ6-qf-mb1" secondAttribute="leading" constant="20" id="HWr-hV-poh"/>
-                                <constraint firstAttribute="trailing" secondItem="1nm-4q-s1K" secondAttribute="trailing" constant="20" id="XSr-mp-aY1"/>
-                                <constraint firstItem="p2p-ll-OoI" firstAttribute="leading" secondItem="xZ6-qf-mb1" secondAttribute="leading" id="atI-Ie-2q7"/>
+                                <constraint firstAttribute="bottom" secondItem="1nm-4q-s1K" secondAttribute="bottom" id="EcT-Tt-sbc"/>
+                                <constraint firstItem="V3W-S8-HSi" firstAttribute="top" secondItem="xZ6-qf-mb1" secondAttribute="top" constant="8" id="Fly-3U-VBo"/>
+                                <constraint firstItem="1nm-4q-s1K" firstAttribute="leading" secondItem="xZ6-qf-mb1" secondAttribute="leading" constant="8" id="HWr-hV-poh"/>
+                                <constraint firstAttribute="bottom" secondItem="u49-RO-qsV" secondAttribute="bottom" id="Ho7-PN-IZj"/>
+                                <constraint firstAttribute="bottom" secondItem="V3W-S8-HSi" secondAttribute="bottom" constant="7" id="PAq-vq-vvG"/>
+                                <constraint firstAttribute="trailing" secondItem="1nm-4q-s1K" secondAttribute="trailing" constant="8" id="XSr-mp-aY1"/>
+                                <constraint firstItem="u49-RO-qsV" firstAttribute="top" secondItem="xZ6-qf-mb1" secondAttribute="top" id="cWh-tj-ZfN"/>
                                 <constraint firstItem="p2p-ll-OoI" firstAttribute="top" secondItem="xZ6-qf-mb1" secondAttribute="top" id="gyh-VE-oRf"/>
+                                <constraint firstItem="V3W-S8-HSi" firstAttribute="leading" secondItem="u49-RO-qsV" secondAttribute="trailing" id="j6g-Q1-Tvm"/>
+                                <constraint firstItem="p2p-ll-OoI" firstAttribute="leading" secondItem="xZ6-qf-mb1" secondAttribute="leading" constant="8" id="qfd-rh-pj1"/>
+                                <constraint firstItem="u49-RO-qsV" firstAttribute="leading" secondItem="p2p-ll-OoI" secondAttribute="trailing" id="smM-8S-LAZ"/>
                             </constraints>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oS1-nf-AP9" userLabel="Auto Log-in Button">
+                            <rect key="frame" x="180" y="90" width="100" height="35"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="YCb-J8-IEb"/>
+                            </constraints>
+                            <state key="normal" image="denglu_zidongdenglu_press.png">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="pressAutoLoginButton:" destination="-1" eventType="touchUpInside" id="Euw-2F-Fkq"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                     <constraints>
+                        <constraint firstAttribute="trailing" secondItem="oS1-nf-AP9" secondAttribute="trailing" id="1Nx-4N-rOA"/>
                         <constraint firstAttribute="bottom" secondItem="BYU-Tn-qzY" secondAttribute="bottom" id="74T-ft-yiy"/>
                         <constraint firstItem="xZ6-qf-mb1" firstAttribute="leading" secondItem="hKb-fE-bxk" secondAttribute="leading" id="8S4-uN-6ij"/>
+                        <constraint firstAttribute="bottom" secondItem="oS1-nf-AP9" secondAttribute="bottom" id="F9R-Hd-dYi"/>
                         <constraint firstAttribute="trailing" secondItem="MBE-cd-dEr" secondAttribute="trailing" id="KQ1-bf-Ldt"/>
                         <constraint firstAttribute="height" constant="125" id="QQF-zw-ne3"/>
                         <constraint firstItem="xZ6-qf-mb1" firstAttribute="top" secondItem="MBE-cd-dEr" secondAttribute="bottom" id="Rd0-68-9NH"/>
@@ -110,6 +151,7 @@
                         <constraint firstItem="BYU-Tn-qzY" firstAttribute="leading" secondItem="hKb-fE-bxk" secondAttribute="leading" id="ix7-7a-Hf3"/>
                         <constraint firstItem="MBE-cd-dEr" firstAttribute="leading" secondItem="hKb-fE-bxk" secondAttribute="leading" id="lWn-ag-OxD"/>
                         <constraint firstAttribute="trailing" secondItem="BYU-Tn-qzY" secondAttribute="trailing" id="oZb-iz-Sac"/>
+                        <constraint firstItem="oS1-nf-AP9" firstAttribute="top" secondItem="xZ6-qf-mb1" secondAttribute="bottom" id="uYT-Fy-9tW"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fxl-W2-qYC" userLabel="Interrelated Login Top Spacing View">
@@ -285,6 +327,7 @@
         <image name="denglu_kuangbg" width="580" height="250"/>
         <image name="denglu_logo.png" width="159" height="74"/>
         <image name="denglu_name.png" width="22" height="22"/>
+        <image name="denglu_zidongdenglu_press.png" width="65" height="15"/>
         <image name="nav_btn_fanhui.png" width="30" height="40"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
